# ElecSealSystem

./: BMP彩色图像文件格式.md  CMakeLists.txt  Chinesereflect.md  README.md  bmpbuild.cpp  bmpbuild.h  content_reflect.md  encoding_conversion.md  experience.md  gainchar_bytxt.cpp  gainchar_bytxt.h  reflect.md  reflect_content.md  seal.cpp  seal_generator.cpp  seal_generator.h  技术实现文档.md  测试报告.md  用户操作说明.md  电子印章系统使用手册.docx  项目经验总结.md
character/: da.md  kuai.md  le.md  ren.md  ri.md  sheng.md  tan.md  zhong.md
